--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,4 @@ jobs:
       run: pip install -r requirements.txt
 
     - name: Deploy application
-      run: |
-        # Replace 'app.py' with your main Flask application file
-        python app.py
+      run: python interview-chatbot/backend/app.py
