--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,12 +16,16 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'  # Specify your Python version
+        python-version: '3.12'  # Specify your Python version
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Build and deploy
-      run: app.py
+    - name: Run app.py
+      run: |
+        python app.py
+      env:
+        FLASK_APP: app.py
+        FLASK_ENV: development  # Use 'production' for production mode
