--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,9 +23,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Run app.py
+    - name: Run Flask app
       run: |
-        python app.py
+        flask run --host=0.0.0.0 --port=5000
       env:
         FLASK_APP: app.py
         FLASK_ENV: development  # Use 'production' for production mode
+        PATH: /opt/hostedtoolcache/Python/3.12.3/x64/bin:$PATH
