--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,9 +24,13 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: '14'
+    - name: Install frontend dependencies
+      run: |
+        cd templates/interview-chatbot-ui
+        npm install
     - name: Build frontend
       run: |
-        cd templates/index.html
+        cd templates/interview-chatbot-ui
         npm run build
-    - name: Run backend tests
+    - name: Run app
       run: python app.py
