--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,9 +19,14 @@ jobs:
       with:
         python-version: '3.12'  # Specify your Python version
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+    -    - name: Install dependencies
+        run: |
+          source .venv/Scripts/activate
+          pip install -r requirements.txt
+
+      - name: Test with pytest
+        run: |
+          source .venv/Scripts/activate
+          pytest
     - name: Build and deploy
       run: backend/app.py
