--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,14 +18,13 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.12'  # Specify your Python version
-
-    -    - name: Install dependencies
-        run: |
+    - name: Install dependencies
+      run: |
           source .venv/Scripts/activate
           pip install -r requirements.txt
 
-      - name: Test with pytest
-        run: |
+    - name: Test with pytest
+      run: |
           source .venv/Scripts/activate
           pytest
     - name: Build and deploy
