--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,12 +20,12 @@ jobs:
         python-version: '3.12'  # Specify your Python version
     - name: Install dependencies
       run: |
-          source .venv/Scripts/activate
+          .venv/Scripts/activate
           pip install -r requirements.txt
 
     - name: Test with pytest
       run: |
-          source .venv/Scripts/activate
+          .venv/Scripts/activate
           pytest
     - name: Build and deploy
       run: backend/app.py
