--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -18,15 +18,9 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.12'  # Specify your Python version
+        
     - name: Install dependencies
-      run: |
-        python -m venv .venv
-        source .venv/bin/activate
-        pip install -r requirements.txt
+      run: pip install -r requirements.txt
 
-    - name: Test with pytest
-      run: |
-        source .venv/bin/activate
-        pytest
     - name: Build and deploy
       run: backend/app.py
