--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,9 @@ jobs:
         python-version: '3.12'  # Specify your Python version
         
     - name: Install dependencies
-      run: pip install -r requirements.txt
-
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        
     - name: Build and deploy
       run: backend/app.py
