--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,5 +26,5 @@ jobs:
         pip install -r requirements.txt
 
       env:
-        FLASK_APP: app.py
+        FLASK_APP: backend/app.py
         FLASK_ENV: production
